<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>piper_bringup</name>
    <version>1.3.6</version>
    <description>Bringup package for piper_ros</description>
    <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>piper_ros</depend>
    <depend>audio_common</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>